Section team Done

--- a/home.html
+++ b/home.html
@@ -284,13 +284,142 @@
             <div class="section-team">
               <div class="sliders">
                 <div class="slide">
-                  <div class="slidearea">...</div>
+                  <div class="slidearea">
+                    <img
+                      src="/media/mulher1.png"
+                      class="section-team--avatar"
+                    />
+                    <div class="section-team--name">Jane Doe</div>
+                    <div class="section-team--function">Master Mind</div>
+                    <div class="section-team--social">
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Twitter_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Instagram_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/LinkedIn_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Facebook_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/YouTube_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Googleplus_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Other_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="slide">
-                  <div class="slidearea">...</div>
+                  <div class="slidearea">
+                    <img src="/media/homem1.png" class="section-team--avatar" />
+                    <div class="section-team--name">Mike Shiller</div>
+                    <div class="section-team--function">Creative Head</div>
+                    <div class="section-team--social">
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Twitter_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Instagram_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/LinkedIn_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Facebook_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/YouTube_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Googleplus_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Other_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                    </div>
+                  </div>
                 </div>
                 <div class="slide">
-                  <div class="slidearea">...</div>
+                  <div class="slidearea">
+                    <img
+                      src="/media/mulher2.png"
+                      class="section-team--avatar"
+                    />
+                    <div class="section-team--name">Anna Johns</div>
+                    <div class="section-team--function">Tech Lead</div>
+                    <div class="section-team--social">
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Twitter_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Instagram_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/LinkedIn_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Facebook_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/YouTube_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Googleplus_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                      <a href=""
+                        ><img
+                          src="/assets/images/icons/Other_icon.svg"
+                          alt="Twitter icon"
+                      /></a>
+                    </div>
+                  </div>
                 </div>
               </div>
             </div>
