--- a/home.html
+++ b/home.html
@@ -28,10 +28,10 @@
               <li><a href="#services">SERVICES</a></li>
               <li><a href="#projects">OUR PROJECTS</a></li>
               <li><a href="#team">OUR TEAM</a></li>
-              <li><a href="">HAPPY CLIENTS</a></li>
-              <li><a href="">PRICE</a></li>
-              <li><a href="">SOME FACTS</a></li>
-              <li><a href="">CONTAC US</a></li>
+              <li><a href="#clients">HAPPY CLIENTS</a></li>
+              <li><a href="#price">PRICE</a></li>
+              <li><a href="#facts">SOME FACTS</a></li>
+              <li><a href="#contact">CONTAC US</a></li>
             </ul>
           </nav>
         </div>
@@ -419,6 +419,49 @@
                           alt="Twitter icon"
                       /></a>
                     </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="paginatorarea">
+              <div class="paginatoritem active"></div>
+              <div class="paginatoritem"></div>
+              <div class="paginatoritem"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End-->
+
+      <!--HappyClients section-->
+      <section class="default light testimonials" id="clients">
+        <div class="section-title">Happy Clients</div>
+        <div class="section-desc">Client Reviews</div>
+        <div class="section-body">
+          <div class="section-testimonials">
+            <div class="sliders">
+              <div class="slide">
+                <div class="slidearea">
+                  <img
+                    src="/media/homem2.png"
+                    alt=""
+                    class="section-testimonials--avatar"
+                  />
+                  <div class="section-testimonials--name">John Doe</div>
+                  <div class="section-testimonials--role">
+                    Head of PR Department
+                  </div>
+                  <img
+                    src="/assets/images/quote.png"
+                    alt=""
+                    class="section-testimonials--quoteimg"
+                  />
+                  <div class="section-testimonials--quote">
+                    Praesent metus urna, feugiat a placerat vel, elementum at
+                    leo. Quisque vel fermentum ipsum. Nulla at facilisis est,
+                    vel condimentum ligula. consectetur. Fusce sed purus eros.
+                    Vivamus rhoncus, ipsum in tempus fermentum, orci leo
+                    facilisis purus
                   </div>
                 </div>
               </div>
