--- a/home.html
+++ b/home.html
@@ -475,6 +475,32 @@
         </div>
       </section>
       <!--End-->
+
+      <!--Companies Section-->
+      <section class="defalut section-companies">
+        <div class="section-body">
+          <div class="section-companies--area">
+            <div class="section-company">
+              <img src="/media/empresa1.png" alt="" />
+            </div>
+            <div class="section-company">
+              <img src="/media/empresa2.png" alt="" />
+            </div>
+            <div class="section-company">
+              <img src="/media/empresa3.png" alt="" />
+            </div>
+            <div class="section-company">
+              <img src="/media/empresa4.png" alt="" />
+            </div>
+            <div class="section-company">
+              <img src="/media/empresa5.png" alt="" />
+            </div>
+            <div class="section-company">
+              <img src="/media/empresa6.png" alt="" />
+            </div>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer></footer>
