Finalizando areas do site

--- a/home.html
+++ b/home.html
@@ -501,6 +501,241 @@
           </div>
         </div>
       </section>
+      <!--End-->
+
+      <!--Price section-->
+      <section class="default light" id="price">
+        <div class="section-title">Price</div>
+        <div class="section-desc">Pricing table</div>
+        <div class="section-body">
+          <div class="section-price">
+            <div class="section-price--item">
+              <div class="section-price--item-name">Express</div>
+              <div class="section-price--item-money">$ 9.99</div>
+              <div class="section-price--item-period">/ month</div>
+              <div class="section-price--item-point">
+                Tracking issues<br />--
+              </div>
+              <div class="section-price--item-point">
+                Add bugs through email<br />--
+              </div>
+              <div class="section-price--item-point">Notifications<br />--</div>
+              <div class="section-price--item-point">Time tracking<br />--</div>
+              <div class="section-price--item-point">Custom views<br />--</div>
+              <a href="" class="button">Choose</a>
+            </div>
+
+            <div class="section-price--item">
+              <div class="section-price--item-name">Standart</div>
+              <div class="section-price--item-money">$ 14.99</div>
+              <div class="section-price--item-period">/ month</div>
+              <div class="section-price--item-point">
+                Tracking issues<br />--
+              </div>
+              <div class="section-price--item-point">
+                Add bugs through email<br />--
+              </div>
+              <div class="section-price--item-point">Notifications<br />--</div>
+              <div class="section-price--item-point">Time tracking<br />--</div>
+              <div class="section-price--item-point">Custom views<br />--</div>
+              <a href="" class="button">Choose</a>
+            </div>
+            <div class="section-price--item">
+              <div class="section-price--item-name">Luxe</div>
+              <div class="section-price--item-money">$ 19.99</div>
+              <div class="section-price--item-period">/ month</div>
+              <div class="section-price--item-point">
+                Tracking issues<br />--
+              </div>
+              <div class="section-price--item-point">
+                Add bugs through email<br />--
+              </div>
+              <div class="section-price--item-point">Notifications<br />--</div>
+              <div class="section-price--item-point">Time tracking<br />--</div>
+              <div class="section-price--item-point">Custom views<br />--</div>
+              <a href="" class="button">Choose</a>
+            </div>
+            <div class="section-price--item">
+              <div class="section-price--item-name">Premium</div>
+              <div class="section-price--item-money">$ 24.99</div>
+              <div class="section-price--item-period">/ month</div>
+              <div class="section-price--item-point">
+                Tracking issues<br />--
+              </div>
+              <div class="section-price--item-point">
+                Add bugs through email<br />--
+              </div>
+              <div class="section-price--item-point">Notifications<br />--</div>
+              <div class="section-price--item-point">Time tracking<br />--</div>
+              <div class="section-price--item-point">Custom views<br />--</div>
+              <a href="" class="button">Choose</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End-->
+
+      <!--Premium Section-->
+      <section class="default light premium">
+        <div class="section-title">Premium</div>
+        <div class="section-desc">Even More Features Available</div>
+        <div class="section-body">
+          <div class="section-premium">
+            <div class="sliders" style="margin-left: 0">
+              <div class="slide">
+                <div class="slidearea">
+                  <div class="section-premium--left">
+                    <img src="media/livros.png" alt="" />
+                  </div>
+                  <div class="section-premium--right">
+                    <div class="section-premium--item">
+                      <img src="assets/images/check.png" alt="" />
+                      <div>
+                        <h4>FIRST FEATURE</h4>
+                        Praesent metus urna, feugiat a placerat vel, elementum
+                        at leo. Quisque vel fermentum ipsum. Nulla at facilisis
+                        est.<br />
+                        — FEATURE ONE<br />
+                        — FEATURE TWO<br />
+                        — FEATURE THREE
+                      </div>
+                    </div>
+                    <div class="section-premium--item">
+                      <img src="assets/images/check.png" alt="" />
+                      <div>
+                        <h4>SECOND FEATURE</h4>
+                        Praesent metus urna, feugiat a placerat vel<br />
+                      </div>
+                    </div>
+                    <div class="section-premium--item">
+                      <img src="assets/images/check.png" alt="" />
+                      <div>
+                        <h4>THIRD FEATURE</h4>
+                        Praesent metus urna, feugiat a placerat vel, elementum
+                        at leo.
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="slide">
+                <div class="slidearea">...</div>
+              </div>
+              <div class="slide">
+                <div class="slidearea">...</div>
+              </div>
+            </div>
+            <div class="paginatorarea">
+              <div class="paginatoritem active"></div>
+              <div class="paginatoritem"></div>
+              <div class="paginatoritem"></div>
+            </div>
+            <div class="btn">
+              <a href="#projects" class="button">More Projects</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--end-->
+
+      <!--SomeFacts Section-->
+      <section class="default dark">
+        <div class="section-title">Some Facts</div>
+        <div class="section-desc">About our work</div>
+        <div class="section-body">
+          <div class="section-facts">
+            <div class="section-fact">
+              <h3>1000</h3>
+              <div class="section-fact-line"></div>
+              <h4>Design Projects Released</h4>
+              <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+            </div>
+            <div class="section-fact">
+              <h3>900</h3>
+              <div class="section-fact-line"></div>
+              <h4>Photos</h4>
+              <br />
+              <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+            </div>
+            <div class="section-fact">
+              <h3>500</h3>
+              <div class="section-fact-line"></div>
+              <h4>Marketing Ideas</h4>
+              <br />
+              <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+            </div>
+            <div class="section-fact">
+              <h3>100</h3>
+              <div class="section-fact-line"></div>
+              <h4>Exhibitions</h4>
+              <br />
+              <p>Praesent metus urna, feugiat a placerat elementum at leo</p>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!--End-->
+
+      <!--Share Section-->
+      <section class="section-share">
+        <div class="section-share--legend">
+          <img src="assets/images/icons/share.png" />
+          Tell About Us:
+        </div>
+        <div class="section-share--item">
+          <div class="section-share--icon twitter">
+            <img src="assets/images/icons/Twitter_icon.svg" />
+          </div>
+          152
+        </div>
+        <div class="section-share--item">
+          <div class="section-share--icon linkedin">
+            <img src="assets/images/icons/LinkedIn_icon.svg" />
+          </div>
+          31
+        </div>
+        <div class="section-share--item">
+          <div class="section-share--icon facebook">
+            <img src="assets/images/icons/Facebook_icon.svg" />
+          </div>
+          165
+        </div>
+        <div class="section-share--item">
+          <div class="section-share--icon googleplus">
+            <img src="assets/images/icons/Googleplus_icon.svg" />
+          </div>
+          22
+        </div>
+        <div class="section-share--item">
+          <div class="section-share--icon pinterest">
+            <img src="assets/images/icons/pinterest.svg" />
+          </div>
+          165
+        </div>
+      </section>
+      <!--end-->
+
+      <!--Contact Section-->
+      <section class="default light">
+        <div class="section-title">Contact Us</div>
+        <div class="section-desc">
+          Our Agency Located in Melbourne, Australia
+        </div>
+        <div class="section-body">
+          <div class="section-contact">
+            <form method="POST">
+              <div class="section-contact--split">
+                <input type="text" name="name" placeholder="NAME" />
+                <input type="text" name="name" placeholder="EMAIL" />
+              </div>
+              <input type="text" name="name" placeholder="SUBJECT" />
+              <textarea name="message" placeholder="MESSAGE"></textarea>
+              <input type="submit" value="Send Message" class="button" />
+            </form>
+          </div>
+        </div>
+      </section>
+      <!--end-->
     </main>
 
     <footer></footer>
